Solved the issue of registering librarian